# home_server

./: Cargo.toml
css/: auth.css  index.css
html/: auth.html  index.html
src/: main.rs
